--- a/daniel-wallen/less/navigation.less
+++ b/daniel-wallen/less/navigation.less
@@ -24,7 +24,8 @@
         font-size: 2rem;
         
         a {
-            color: skyblue;
+            color: @prime-color;
+            font-weight: bold;
             text-decoration: none;
             margin-right: 20px;
             .nav-transform();
