--- a/daniel-wallen/less/navigation.less
+++ b/daniel-wallen/less/navigation.less
@@ -16,6 +16,10 @@
                 font-size: 3rem;
                 margin-bottom: 20px;
             }
+
+            @media @tablet {
+                margin-bottom: 20px;
+            }
         }
     }
 
