--- a/daniel-wallen/css/index.css
+++ b/daniel-wallen/css/index.css
@@ -171,7 +171,7 @@ h2 {
 }
 .top nav a {
   color: aqua;
-  font-weight: bold;
+  opacity: 0.75;
   text-decoration: none;
   margin-right: 20px;
   background: white;
@@ -326,7 +326,6 @@ h2 {
   width: 1000px;
   background: aqua;
   border: 2px solid orange;
-  font-weight: bold;
   color: white;
   font-family: "Roboto";
   display: flex;
