--- a/daniel-wallen/less/navigation.less
+++ b/daniel-wallen/less/navigation.less
@@ -29,7 +29,7 @@
         
         a {
             color: @prime-color;
-            font-weight: bold;
+            opacity: 0.75;
             text-decoration: none;
             margin-right: 20px;
             .nav-transform();
