--- a/daniel-wallen/css/index.css
+++ b/daniel-wallen/css/index.css
@@ -144,6 +144,7 @@ h2 {
   font-size: 3rem;
 }
 .top {
+  margin-top: 20px;
   display: flex;
   justify-content: space-evenly;
   flex-wrap: wrap;
@@ -192,6 +193,12 @@ h2 {
   .top {
     flex-direction: column;
   }
+}
+.footer {
+  font-family: "Roboto";
+  font-size: 2rem;
+  text-align: center;
+  margin-bottom: 20px;
 }
 .feature-img {
   width: 100%;
@@ -334,6 +341,7 @@ h2 {
   border-radius: 20px;
   font-size: 3rem;
   transition: 1s;
+  margin-bottom: 20px;
 }
 .bottom btn:hover {
   background: white;
