--- a/daniel-wallen/less/footer.less
+++ b/daniel-wallen/less/footer.less
@@ -1,2 +1,8 @@
 // Footer styles here
 
+.footer {
+    font-family: @header-font;
+    font-size: 2rem;
+    text-align: center;
+    margin-bottom: 20px;
+}
