--- a/daniel-wallen/less/home-page.less
+++ b/daniel-wallen/less/home-page.less
@@ -128,6 +128,7 @@
 
     btn {
         .button-transform();
+        margin-bottom: 20px;
 
         @media @mobile {
             max-width: 100%;
