--- a/daniel-wallen/less/navigation.less
+++ b/daniel-wallen/less/navigation.less
@@ -1,6 +1,7 @@
 // Navigation code here
 
 .top {
+    margin-top: 20px;
     display: flex;
     justify-content: space-evenly;
     flex-wrap: wrap;
