--- a/daniel-wallen/css/index.css
+++ b/daniel-wallen/css/index.css
@@ -206,6 +206,7 @@ h2 {
   display: flex;
   justify-content: center;
   margin-top: 20px;
+  margin-bottom: 20px;
 }
 @media (max-width: 500px) {
   .feature-img {
@@ -216,24 +217,26 @@ h2 {
   .feature-img {
     margin-bottom: 0;
     max-height: 100%;
+    max-width: 100%;
   }
 }
 .middle {
   font-family: Arial;
   font-size: 1.5rem;
   display: flex;
+  justify-content: center;
   flex-direction: column;
 }
 .middle .card {
   display: flex;
-  justify-content: space-between;
-  margin: 40px 0;
+  margin-top: 60px;
+  width: 100%;
 }
 .middle .card .card-text {
   width: 40%;
-  margin: 120px 40px 0 40px;
+  margin-left: 80px;
+  margin-top: 120px;
   line-height: 2;
-  vertical-align: center;
 }
 @media (max-width: 500px) {
   .middle .card .card-text {
@@ -275,6 +278,9 @@ h2 {
 }
 .middle .card .card-img {
   width: 60%;
+  display: flex;
+  margin-left: 80px;
+  justify-content: center;
 }
 @media (max-width: 500px) {
   .middle .card .card-img {
@@ -295,6 +301,9 @@ h2 {
     justify-content: center;
     width: 100%;
   }
+}
+.middle .card .card-img img {
+  margin: 0 auto;
 }
 @media (max-width: 500px) {
   .middle .card .card-img img {
@@ -341,6 +350,7 @@ h2 {
   border-radius: 20px;
   font-size: 3rem;
   transition: 1s;
+  margin-top: 40px;
   margin-bottom: 20px;
 }
 .bottom btn:hover {
