Added animation to header images (they fade in now).

--- a/daniel-wallen/less/home-page.less
+++ b/daniel-wallen/less/home-page.less
@@ -7,6 +7,20 @@
     justify-content: center;
     margin-top: 20px;
     margin-bottom: 20px;
+    opacity: 1;
+	animation-name: fadeInOpacity;
+	animation-iteration-count: 1;
+	animation-timing-function: ease-in;
+	animation-duration: 2s;
+
+        @keyframes fadeInOpacity {
+            0% {
+                opacity: 0;
+            }
+            100% {
+                opacity: 1;
+            }      
+        }
 
     @media @mobile {
         display: none;
