--- a/daniel-wallen/css/index.css
+++ b/daniel-wallen/css/index.css
@@ -207,6 +207,19 @@ h2 {
   justify-content: center;
   margin-top: 20px;
   margin-bottom: 20px;
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 2s;
+}
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 @media (max-width: 500px) {
   .feature-img {
