--- a/daniel-wallen/css/index.css
+++ b/daniel-wallen/css/index.css
@@ -366,6 +366,14 @@ h2 {
   cursor: pointer;
   -webkit-text-stroke-width: 0.25px;
 }
+.bottom btn a {
+  text-decoration: none;
+  color: white;
+  transition: 2s;
+}
+.bottom btn a:hover {
+  color: aqua;
+}
 @media (max-width: 500px) {
   .bottom btn {
     max-width: 100%;
