Updated mixin to account for a tag within it.

--- a/daniel-wallen/css/index.css
+++ b/daniel-wallen/css/index.css
@@ -349,8 +349,6 @@ h2 {
   width: 1000px;
   background: aqua;
   border: 2px solid orange;
-  color: white;
-  font-family: "Roboto";
   display: flex;
   justify-content: center;
   align-items: center;
@@ -360,18 +358,17 @@ h2 {
   margin-top: 40px;
   margin-bottom: 20px;
 }
+.bottom btn a {
+  text-decoration: none;
+  font-family: "Roboto";
+  color: white;
+}
 .bottom btn:hover {
   background: white;
-  color: aqua;
   cursor: pointer;
   -webkit-text-stroke-width: 0.25px;
 }
-.bottom btn a {
-  text-decoration: none;
-  color: white;
-  transition: 2s;
-}
-.bottom btn a:hover {
+.bottom btn:hover a {
   color: aqua;
 }
 @media (max-width: 500px) {
